samples/_failures_safe/1761318355_0bda1d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_06f9b7fa.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_06f9b7fa.c:154:5: error: expected declaration or statement at end of input
  154 |     }
      |     ^
